--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <div class="productsHeader">
                 <label class="resultsLabel"></label>
 
-                <input name="search" id="searchInput" class="searchBar" placeholder="Search By Product" />
+                <input name="search" id="searchInput" class="searchBar" placeholder="Search By Product Name" />
 
                 <select class="selectClass" id="selectValue" onchange="sortProductsData()">
-                    <option selected value="default">Select Sort</option>
+                    <option selected value="default">Default Sort</option>
                     <option value="price">Sort By Product Price</option>
                     <option value="title">Sort By Product Name</option>
                 </select>
